[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-playground"
version = "0.1.0"
description = "Tabular Q-learning experiments for custom CartPole environments."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]